<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">乐啪</string>
    <!-- 通用错误信息提示 -->
    <string name="common_error_username_not_exists">用户名或密码错误</string>
    <string name="common_error_password_not_incorrect">密码不正确</string>
    <string name="common_error_username_not_null">用户名不能为空</string>
    <string name="common_error_password_not_null">密码不能为空</string>
    <string name="network_disable_error">网络连接不可用，请检查您的网络设置</string>
    <string name="common_dialog_title_error">错误报告</string>
    <string name="common_dialog_btn_ok">确定</string>
    <string name="common_dialog_btn_cancel">取消</string>
    <string name="exit_app_title">退出应用</string>
    <string name="exit_app_rem">您确定要退出应用吗？</string>
    <string name="exit_app_dialog_btn_exit">退出</string>
    <string name="exit_app_dialog_btn_cancel">取消</string>

    <!-- 登录页面信息 -->
    <string name="login_title_name">登录</string>
    <string name="login_btn_name">进入酒厂</string>
    <string name="login_edt_userphone">请输入手机号</string>
    <string name="login_edt_userpwd">请输入密码</string>
    <string name="login_btn_usercode">获取验证码</string>
    <string name="login_edt_usercode">请输入验证码</string>

    <!-- tab 按钮文字 -->
    <string name="tab_text1">商城</string>
    <string name="tab_text2">分类</string>
    <string name="tab_text3">社区</string>
    <string name="tab_text4">购物车</string>
    <string name="tab_text5">我</string>
    <!--tab title文字  -->
    <string name="tab_head_homepage_text">首页</string>
    <string name="tab_head_middle_text">买卖</string>
    <string name="tab_head_my_text">我的</string>

    <!--酒厂页面  -->
    <string name="my_title_name">我的酒庄</string>
    <string name="my_msg_name">我的消息</string>
    <string name="my_purse_name">我的钱包</string>
    <string name="my_indent_name">我的订单</string>
    <string name="my_bottle_name">我的存酒</string>
    <string name="my_contract_name">我的合同</string>
    <string name="my_bankcard_name">我的银行卡</string>

    <!--首页  -->
    <string name="winery_text_count">酒瓶总数</string>
    <string name="winery_text_sum">0</string>

    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <string name="head">这里是HeadView</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">下拉更新</string>

    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">Pull to load more&#8230;</string>
    <string name="pull_to_refresh_from_bottom_release_label">Release to load more&#8230;</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

</resources>