<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/tab_fragment_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ededed"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888888" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y59"
        android:background="#fefefe"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_1"
                    android:layout_width="@dimen/y25"
                    android:layout_height="@dimen/y25"
                    android:layout_marginBottom="1dp"
                    android:background="@mipmap/tab_ico1" />

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text1"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="@dimen/y25"
                    android:layout_height="@dimen/y25"
                    android:layout_marginBottom="1dp"
                    android:background="@mipmap/tab_ico22" />

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text2"
                    android:textColor="@color/tab_text_color1"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_3"
                    android:layout_width="@dimen/y25"
                    android:layout_height="@dimen/y25"
                    android:layout_marginBottom="1dp"
                    android:background="@mipmap/tab_ico33" />

                <TextView
                    android:id="@+id/tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text3"
                    android:textColor="@color/tab_text_color1"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_4"
                    android:layout_width="@dimen/y25"
                    android:layout_height="@dimen/y25"
                    android:layout_marginBottom="1dp"
                    android:background="@mipmap/tab_ico44" />

                <TextView
                    android:id="@+id/tv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text4"
                    android:textColor="@color/tab_text_color1"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_5"
                    android:layout_width="@dimen/y25"
                    android:layout_height="@dimen/y25"
                    android:layout_marginBottom="1dp"
                    android:background="@mipmap/tab_ico55" />

                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text5"
                    android:textColor="@color/tab_text_color1"
                    android:textSize="@dimen/text_size_three" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
